tests/baselines/reference/001_magic.errors.txt
001_magic.ts(1,30): error TS2307: Cannot find module './001_magic_imported' or its corresponding type declarations.
001_magic.ts(12,19): error TS2304: Cannot find name 'MagicType'.


==== 001_magic.ts (2 errors) ====
    import { ImportedType } from "./001_magic_imported";
                                 ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './001_magic_imported' or its corresponding type declarations.
    // import { MagicType } from "./001_magic_magic";
    
    const localValue: LocalType = {
        someProp: "boring"
    };
    
    const refValue: ImportedType = {
        someNumProp: 42
    };
    
    const magicValue: MagicType = {
                      ~~~~~~~~~
!!! error TS2304: Cannot find name 'MagicType'.
        someMagicProp: "abraka dabra"
    }
    
    interface LocalType {
        someProp: string
    }